fix charts clipped on small devices (#385)
* fix clipping of charts on small devices (eg iPhone)

* Rebuild web UI

---------

--- a/webui/src/app/charting/chart.component.scss
+++ b/webui/src/app/charting/chart.component.scss
@@ -8,3 +8,12 @@
     opacity: 1;
   }
 }
+
+.app-chart {
+  position: relative;
+}
+
+.app-chart-small {
+  position: relative;
+  width: calc(40vw + 100px);
+}
